# study_collaboration

./: .gitignore  LICENSE  MANUAL_TEST.md  PLAN.md  PRD.md  README.md  SPEC.md  pyproject.toml
backend/: __init__.py
backend/app/: cli.py  config.py  main.py
backend/app/api/: __init__.py  bootstrap.py  errors.py  products.py  websockets.py
backend/app/domain/: money.py  products.py  protocol.py  session.py
backend/app/services/: catalog.py  logging.py  realtime.py  session.py
backend/app/storage/: __init__.py  session_store.py
backend/tests/: test_cli.py  test_health.py  test_logging.py
backend/tests/api/: test_bootstrap.py  test_products.py
backend/tests/domain/: test_catalog.py  test_money.py  test_session.py  test_speech.py
backend/tests/storage/: test_session_store.py
backend/tests/ws/: test_control_slot.py  test_realtime.py  test_speech_commands.py
data/: catalog.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: http.ts  types.ts  uuid.test.ts  uuid.ts
frontend/src/components/: LiveCaptureFrame.tsx  PrivateConsole.tsx
frontend/src/features/controls/: PrivateConsole.test.tsx
frontend/src/features/live/: LiveCaptureFrame.test.tsx  formatPrice.ts  outputResolution.ts
frontend/src/features/mobile/: MobileControl.test.tsx  MobileControl.tsx  useControlSession.test.tsx  useControlSession.ts
frontend/src/features/session/: useStudioSession.test.tsx  useStudioSession.ts
scripts/: check.py
(+4 files in other folders)
